optimize code, add getall api